Get rid of feedback between host and road (on buttons). Frequency can now be set by any value, not only specific values.

--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
     "VELO_MAX" : 60,
     "TX_ADDR_HOST" : "0001",
     "TX_ADDR_ROAD" : "0002",
-    "FREQUENCY" : 860,
-    "POWER" : 10
+    "FREQUENCY" : 901000000,
+    "POWER" : 20
 }
