Working on code.

--- a/help/cam-road.desktop
+++ b/help/cam-road.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=CamRoad
 Comment=CamRoad
 Icon=gnome-info
-Exec=bash -c "cd /home/pi/host/source/ && ./run.sh"
+Exec=bash -c "cd /home/pi/Cam-road/host/source/ && ./run.sh"
 Terminal=True
 Type=Application
 Categories=
