Started c++ branch by ini interface. Project is QtCreator(qmake) + Clion(cmake). Use first to create files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# motor lib
 fortune-controls
+
+# Python .pyc
 **/__pycache__
-**/.idea
+
+# jetbrains ides settings
+#**/.idea
+
+# Clion build directories
+**/cmake-*
+
+# Qt Creator build folder
+**/build
