--- a/host/source/ui/settings.json
+++ b/host/source/ui/settings.json
@@ -1,11 +1,11 @@
 {
-    "ACCEL" : 10.0,
-    "BRAKING" : 15,
-    "END_POINTS" : 1,
-    "END_POINTS_STOP" : 1,
-    "SWAP" : 0,
-    "STOP_ACCEL" : 1,
-    "LOCK" : 0,
-    "SIG_LOSE" : 0,
-    "STOP_TIME" : 10
+  STOP_ACCEL: 1
+  BRAKING: 80
+  SIG_LOSE: 2
+  ACCEL: 87.0
+  LOCK: 0
+  END_POINTS: 1
+  END_POINTS_STOP: 0
+  SWAP: 0
+  STOP_TIME: 1
 }
